quiche-csbindgen.g.cs


    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_send_info
    {
        public sockaddr_storage from;
        public uint from_len;
        public sockaddr_storage to;
        public uint to_len;
        public timespec at;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_stream_iter
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_connection_id_iter
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_stats
    {
        public nuint recv;
        public nuint sent;
        public nuint lost;
        public nuint retrans;
        public ulong sent_bytes;
        public ulong recv_bytes;
        public ulong acked_bytes;
        public ulong lost_bytes;
        public ulong stream_retrans_bytes;
        public nuint paths_count;
        public ulong reset_stream_count_local;
        public ulong stopped_stream_count_local;
        public ulong reset_stream_count_remote;
        public ulong stopped_stream_count_remote;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_transport_params
    {
        public ulong peer_max_idle_timeout;
        public ulong peer_max_udp_payload_size;
        public ulong peer_initial_max_data;
        public ulong peer_initial_max_stream_data_bidi_local;
        public ulong peer_initial_max_stream_data_bidi_remote;
        public ulong peer_initial_max_stream_data_uni;
        public ulong peer_initial_max_streams_bidi;
        public ulong peer_initial_max_streams_uni;
        public ulong peer_ack_delay_exponent;
        public ulong peer_max_ack_delay;
        [MarshalAs(UnmanagedType.U1)] public bool peer_disable_active_migration;
        public ulong peer_active_conn_id_limit;
        public nint peer_max_datagram_frame_size;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_path_stats
    {
        public sockaddr_storage local_addr;
        public uint local_addr_len;
        public sockaddr_storage peer_addr;
        public uint peer_addr_len;
        public nint validation_state;
        [MarshalAs(UnmanagedType.U1)] public bool active;
        public nuint recv;
        public nuint sent;
        public nuint lost;
        public nuint retrans;
        public ulong rtt;
        public nuint cwnd;
        public ulong sent_bytes;
        public ulong recv_bytes;
        public ulong lost_bytes;
        public ulong stream_retrans_bytes;
        public nuint pmtu;
        public ulong delivery_rate;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_path_event
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_socket_addr_iter
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_h3_config
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_h3_conn
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_h3_event
    {
        public fixed byte _unused[1];
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_h3_header
    {
        public byte* name;
        public nuint name_len;
        public byte* value;
        public nuint value_len;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_h3_priority
    {
        public byte urgency;
        [MarshalAs(UnmanagedType.U1)] public bool incremental;
    }

    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct quiche_h3_stats
    {
        public ulong qpack_encoder_stream_recv_bytes;
        public ulong qpack_decoder_stream_recv_bytes;
    }



}
